--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-GB Emulator using Oing Language
+GB Emulator using Odin Language
 
-This is a GB emulator written in Oing language.
+
+This is a GB emulator written in Odin language.
 
 It is a work in progress.
